--- a/app/WizardSurf/WizardSurf.Desktop.csproj
+++ b/app/WizardSurf/WizardSurf.Desktop.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Util\InputHelper.cs" />
     <Compile Include="Entities\Fireball.cs" />
     <Compile Include="Entities\PowerUp.cs" />
+    <Compile Include="Screens\BaseScreen.cs" />
+    <Compile Include="Screens\SurfScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -114,6 +116,7 @@
   <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="Util\" />
+    <Folder Include="Screens\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
