--- a/app/WizardSurf/WizardSurf.Desktop.csproj
+++ b/app/WizardSurf/WizardSurf.Desktop.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Screens\BaseScreen.cs" />
     <Compile Include="Screens\SurfScreen.cs" />
     <Compile Include="DebugPanel.cs" />
+    <Compile Include="EntityImplementations\Fireballs.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -118,6 +119,7 @@
     <Folder Include="Entities\" />
     <Folder Include="Util\" />
     <Folder Include="Screens\" />
+    <Folder Include="EntityImplementations\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
