--- a/app/WizardSurf/WizardSurf.Desktop.csproj
+++ b/app/WizardSurf/WizardSurf.Desktop.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DebugPanel.cs" />
     <Compile Include="EntityImplementations\Fireballs.cs" />
     <Compile Include="Spawners\WallSpawner.cs" />
+    <Compile Include="Screens\StartScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
