--- a/app/WizardSurf/WizardSurf.Desktop.csproj
+++ b/app/WizardSurf/WizardSurf.Desktop.csproj
@@ -54,9 +54,11 @@
     <Compile Include="Screens\BaseScreen.cs" />
     <Compile Include="Screens\SurfScreen.cs" />
     <Compile Include="DebugPanel.cs" />
-    <Compile Include="EntityImplementations\Fireballs.cs" />
     <Compile Include="Spawners\WallSpawner.cs" />
     <Compile Include="Screens\StartScreen.cs" />
+    <Compile Include="Entities\Particle.cs" />
+    <Compile Include="Engines\ParticleEngine.cs" />
+    <Compile Include="Engines\FireballEngine.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -129,8 +131,8 @@
     <Folder Include="Entities\" />
     <Folder Include="Util\" />
     <Folder Include="Screens\" />
-    <Folder Include="EntityImplementations\" />
     <Folder Include="Spawners\" />
+    <Folder Include="Engines\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
