Added level engine, filled lut levels, refactored to switch stages, count down to next stage, added todos

--- a/app/WizardSurf/WizardSurf.Desktop.csproj
+++ b/app/WizardSurf/WizardSurf.Desktop.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Entities\Particle.cs" />
     <Compile Include="Engines\ParticleEngine.cs" />
     <Compile Include="Engines\FireballEngine.cs" />
+    <Compile Include="Engines\LevelEngine.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
